--- a/genootschap/src/main/resources/application.properties
+++ b/genootschap/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 
 spring.data.mongodb.uri=mongodb+srv://remco:li2hoRYSabGzWXH6@wyrgenootschap.jtmjrph.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=WYRGenootschap
+server.address=192.168.178.155
